noTicket/fixesStickyAlignment-Antonio

--- a/src/styles/container/_c-headerNav.scss
+++ b/src/styles/container/_c-headerNav.scss
@@ -1210,8 +1210,20 @@
 
       .c-topNavLinks {
         border: none;
-        width: auto;
+        width: 100%;
         order: initial;
+
+        &.content {
+          width: auto;
+  
+          .sticky-logo-homepage {
+            display: none;
+          }
+  
+          .stickyNav-homepage {
+            display: none;
+          }
+        }
       }
 
       .c-headerIcon {
@@ -1414,10 +1426,6 @@
         width: 240px;
       }
     }
-
-    &.hidden {
-      display: none;
-    }
   }
 
   .c-stickyLogin {
@@ -1463,10 +1471,6 @@
 
     @include breakpoint(tablet) {
       display: flex;
-    }
-
-    &.hidden {
-      display: none;
     }
 
     a {
